# CollabConnector

./: .gitignore  MANIFEST.in  README.md  __init__.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
CER/: CER.py  __init__.py
CUCM/: __init__.py
CUCM/AST/: __init__.py
CUCM/AXL/: AXL.py
CUCM/AXL/Add/: Add.py  __init__.py
CUCM/AXL/Do/: __init__.py
CUCM/AXL/Get/: Get.py
CUCM/AXL/List/: __init__.py
CUCM/AXL/Remove/: Remove.py
CUCM/AXL/Update/: Update.py  __init__.py
CUCM/CDR/: CDROnDemand.py  CDRParser.py  __init__.py
CUCM/Logs/: __init__.py
CUCM/Risport/: __init__.py
CUCM/Serviceability/: __init__.py
CUCM/UDS/: UDS.py  __init__.py
CUCX/: CUCX.py
PAWS/: PAWS.py
UCCX/: UCCX.py  __init__.py
Webex/: CallControl.py  Webex.py
src/CUCM/: CUCM.py
src/CUCM/AXL/Do/: Do.py
src/CUCM/AXL/Remove/: __init__.py
src/CUCM/CDR/: CDR.py
src/CUCM/DIME/: DIME.py
src/CUCM/Risport/: Risport.py
src/CUCM/Serviceability/: Serviceability.py
src/CUCX/: __init__.py
src/CollabConnector/: __init__.py
src/CollabConnector/CER/: CER.py
src/CollabConnector/CUCM/: CUCM.py  Regex.py  __init__.py
src/CollabConnector/CUCM/AST/: AST.py
src/CollabConnector/CUCM/AXL/: AXL.py  __init__.py  axl_generator.py
src/CollabConnector/CUCM/AXL/Get/: __init__.py
src/CollabConnector/CUCM/AXL/List/: List.py
src/CollabConnector/CUCM/CDR/: CDR.py
src/CollabConnector/CUCM/DIME/: DIME.py  __init__.py
src/CollabConnector/CUCM/Logs/: Logs.py
src/CollabConnector/CUCM/Phone/: Phone.py  __init__.py
src/CollabConnector/CUCM/Risport/: Risport.py
src/CollabConnector/CUCM/Serviceability/: Serviceability.py  __init__.py
src/CollabConnector/CUCM/TFTP/: TFTP.py  __init__.py
src/CollabConnector/CUCM/UDS/: UDS.py
src/CollabConnector/CUCX/: CUCX.py
src/CollabConnector/Expressway/: Expressway.py
src/CollabConnector/IOS/: IOS.py  __init__.py
src/CollabConnector/IOS/Status/: Status.py  __init__.py
src/CollabConnector/PAWS/: __init__.py
src/CollabConnector/Phone/: Phone.py
src/CollabConnector/Tools/: Sheets.py  Tar.py  __init__.py
src/CollabConnector/UCCX/: UCCX.py
src/CollabConnector/Webex/: ContactCenter.py  Webex.py  __init__.py
src/CollabConnector/Webex/Connect/: REST.py  TXT.py  WhatsApp.py  __init__.py
src/CollabConnector/Webex/Consent/: REST.py  __init__.py
src/CollabConnector/Webex/ContactCenter/: ContactCenter.py  __init__.py
src/CollabConnector/Webex/Engage/: Chat.py  REST.py  Team.py  User.py  __init__.py
src/CollabConnector/Webex/Phone/: Phone.py
src/Phone/: Phone.py  __init__.py
src/Webex/: ContactCenter.py  OutputStyle.py
