[build-system]
requires = ["setuptools==70.1.0", "wheel"]
build-backend = "setuptools.build_meta"
backend-path = ["."]

[project]
name = "CollabConnector"  # Replace with your actual package name
version = "0.1.1747171588"

# Add a brief description of your project
description = "An attempt at a simplified API collection for Cisco Collab products"

# It's also good practice to include:
readme = "README.md" # If you have a README file
license = {file = "LICENSE"}
requires-python = ">=3.8" # Specify the Python versions your project supports

classifiers = [
    # Add any necessary classifiers here
]