[build-system]
requires = ["setuptools>=70.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CollabConnector"
version = "0.1.1754922674"
description = "An attempt at a simplified API collection for Cisco Collab products"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    {name = "Jon Snipes", email = "jsnipes@mycollablab.org"},
]
dependencies = [
    "requests>=2.28.1",
    "xmltodict>=0.13.0",
    "zeep>=4.1.0",
    "pandas>=1.5.3",
    "openpyxl>=3.1.2",
]

[project.urls]
Homepage = "https://github.com/mycollablab/CollabConnector"
"Bug Tracker" = "https://github.com/mycollablab/CollabConnector/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
CollabConnector = ["CUCM/AXL/schema/*/*.wsdl", "CUCM/AXL/schema/*/*.xsd"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]