[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CollabConnector"
version = "0.1.1754924847"
description = "An attempt at a simplified API collection for Cisco Collab products"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "Jon Snipes", email = "jsnipes@mycollablab.org"},
]
keywords = ["cisco", "collaboration", "api", "cucm", "webex"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications",
]
dependencies = [
    "requests>=2.28.1",
    "xmltodict>=0.13.0",
    "zeep>=4.1.0",
    "pandas>=1.5.3",
    "openpyxl>=3.1.2",
]

[project.urls]
Homepage = "https://github.com/mycollablab/CollabConnector"
Repository = "https://github.com/mycollablab/CollabConnector"
"Bug Tracker" = "https://github.com/mycollablab/CollabConnector/issues"


[tool.hatch.build.targets.wheel]
packages = ["src/CollabConnector"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build]
include = [
    "src/CollabConnector/**/*.py",
    "src/CollabConnector/CUCM/AXL/schema/**/*.wsdl",
    "src/CollabConnector/CUCM/AXL/schema/**/*.xsd",
]
