[metadata]
name = CollabConnector
version = 0.0.1
author = Jon Snipes
author_email = jsnipes@mycollablab.org
description = Simplified API collection for Cisco Collab Products
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/mycollablab/CollabConnector
project_urls =
    Bug Tracker = https://github.com/mycollablab/CollabConnector/-/issues
    repository = https://github.com/mycollablab/CollabConnector
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src