[metadata]
name = CollabConnector
version = 0.1.1747173319
author = Jon Snipes
author_email = jsnipes@mycollablab.org
description = An attempt at a simplified API collection for Cisco Collab products
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mycollablab/CollabConnector
project_urls =
    Bug Tracker = https://github.com/mycollablab/CollabConnector/issues
    repository = https://github.com/mycollablab/CollabConnector
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests>=2.28.1
    xmltodict>=0.13.0
    zeep>=4.1.0
    pandas>=1.5.3
    openpyxl>=3.1.2

[options.package_data]
CollabConnector = CUCM/AXL/schema/*/*.wsdl, CUCM/AXL/schema/*/*.xsd

[options.packages.find]
where = src
